Alright, try fixed width and breaks in captions

--- a/css/astro_style.css
+++ b/css/astro_style.css
@@ -348,12 +348,13 @@ div.figure {
 
 div.figure_caption {
   float: left;
-  width: 50%;
+  width: 600;
   text-align: left;
   font-style: italic;
   font-size: smaller;
-  text-indent: 15;
+  text-indent: 30;
 /*
+  width: 60%;
   margin: 0.5em;
   padding: 0.5em;
   border: thin silver solid;
